Fix issues with positioning and dimentions of icons on IE and Edge

--- a/src/less/blocks/card.less
+++ b/src/less/blocks/card.less
@@ -184,3 +184,11 @@
     }
   }
 }
+
+.card__action {
+  padding: 0;
+
+  svg {
+    padding: 8px 6px;
+  }
+}
