--- a/src/less/blocks/icon.less
+++ b/src/less/blocks/icon.less
@@ -44,7 +44,10 @@
     &_small {
       width: 32px;
       height: 32px;
-      padding: 5px 4px;
+
+      svg {
+        padding: 5px;
+      }
     }
     &_common {
       width: 60px;
@@ -55,17 +58,12 @@
       }
     }
     &_big {
-      padding: 4px;
       width: 37px;
       height: 37px;
       border-radius: 50%;
-    }
-    &_common {
-      width: 60px;
-      height: 60px;
-      
+
       svg {
-        width: 32px;
+        padding: 8px;
       }
     }
   }
