--- a/src/less/blocks/mobile-menu.less
+++ b/src/less/blocks/mobile-menu.less
@@ -44,7 +44,6 @@
 
     .navigation-item__icon {
       position: relative;
-      padding-left: 14px;
       flex-basis: 60px;
       height: 59px;
       border-left: 1px solid #a3a3a3;
