--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -71,13 +71,16 @@
   }
 
   &__icon {
-    padding: 13px;
     flex-basis: 42px;
     flex-shrink: 0;
     width: 42px;
     height: 42px;
     border-radius: 1px;
     background-color: @color-lightgrey;
+
+    svg {
+      padding: 5px;
+    }
 
     &--remind {
       position: relative;
