--- a/src/less/blocks/sidebar-modal.less
+++ b/src/less/blocks/sidebar-modal.less
@@ -98,14 +98,20 @@
     }
   }
 
-  // &__icon {
-  //   opacity: 0.01;
-  //   transition: opacity 0.25s ease-out;
+  &__icon {
+    padding: 0;
 
-  //   @media (min-width: 480px) {
-  //     opacity: 1;
-  //   }
-  // }
+    svg {
+      width: auto;
+      padding: 14px;
+    }
+
+    // opacity: 0.01;
+    // transition: opacity 0.25s ease-out;
+    // @media (min-width: 480px) {
+    //   opacity: 1;
+    // }
+  }
 
   &__title {
     display: flex;
